# research_project_PR_labs

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.py  constants.py  data_processing.py  environment.lock.yml  hugging_face_transformer_job.sh  hyperParameters.json  initial_analysis.ipynb  job.sh  make_clean_labels.py  make_predtrad_npy_zip.py  model.py  ploting_util.py  predtrad_job.sh  pyproject.toml  requirements.lock.txt  train.py  tranformer_job.sh  txt_to_paraquet.py
.github/workflows/: gitlab-sync.yml
VAE/: 6_clusters.py  cluster_job.sh  clustering_util.py  data_processing.py  hyperParameters.json  model.py  ploting_util.py  results_job.sh  train.py
checkpoints/transformers/: fault_classifier_metrics.json  fault_classifier_prcurve.csv
external_libs/PredTrAD/: .gitignore  LICENSE  README.md  check_experiments.py  metrics.py  predtrad_impl.py  requirements.txt
hugging_face_transformer/: classify_config.json  data_processing.py  hyper_parameter.json  linear_head.py  memmap_dataset.py  train.py  train_linear_head.py  utils.py
scalers/: minmax_scaler_Sekundärspannung_L1_in_V.pkl  minmax_scaler_Sekundärstrom_L1_in_A.pkl  minmax_scaler_Sekundärstrom_L2_in_A.pkl
scalers/PredTraD/: minmax_scaler_sensor1.pkl
scalers/VAE/: minmax_scaler_Sekundärstrom_L2_in_A.pkl  (+3 more)
scripts/: convert_parquet_to_npy.py  predtradConverter.py  prep_zip.py  txt_to_paraquet.py
transformer/: clasify_config.json  data_processing.py  hyperParameters.json  make_fault_snippets.py  model.py  ploting_util.py  train.py  train_classification_head.py  utils.py  utils_label.py  v2_head.py
(+21 files in other folders)
